--- a/feature/flight-tickets/src/main/res/layout/activity_flight_tickets.xml
+++ b/feature/flight-tickets/src/main/res/layout/activity_flight_tickets.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize">
 
+    <!-- app:labelVisibilityMode="labeled" turn on labels -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_nav_menu" />
 
     <!-- android:name="androidx.navigation.dynamicfeatures.fragment.DynamicNavHostFragment"-->
