--- a/feature/flight-tickets/src/main/res/layout/card_search.xml
+++ b/feature/flight-tickets/src/main/res/layout/card_search.xml
@@ -4,15 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:background="@color/grey_2"
+    style="@style/Theme.Effectivem.CardViewStyle"
     tools:context=".screens.home.SearchDialogFragment"
-    tools:style="@style/Theme.Effectivem.BottomSheetDialog"
     tools:theme="@style/Theme.Effectivem">
 
     <androidx.cardview.widget.CardView
-        style="?attr/cardViewNestedStyle"
+        style="@style/Theme.Effectivem.CardViewNestedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -26,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:paddingEnd="?attr/viewPadding"
+                android:paddingEnd="@dimen/view_padding"
                 tools:ignore="RtlSymmetry">
 
                 <ImageButton
@@ -36,8 +33,7 @@
                     android:layout_gravity="center_vertical"
                     android:contentDescription="@string/cd_search"
                     android:scaleType="centerInside"
-                    android:src="@drawable/search"
-                    tools:style="?attr/imageButtonStyle" />
+                    android:src="@drawable/search"/>
             </FrameLayout>
 
             <LinearLayout
@@ -49,20 +45,19 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="8dp" >
+                    android:paddingBottom="8dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/dest_city"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@null"
                         tools:text="@string/dest_city_default" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="?attr/colorOnSurfaceVariant" />
+                    android:background="?attr/colorOnSurface"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
