--- a/feature/flight-tickets/src/main/res/layout/item_offer.xml
+++ b/feature/flight-tickets/src/main/res/layout/item_offer.xml
@@ -7,16 +7,16 @@
     tools:theme="@style/Theme.Effectivem">
 
     <FrameLayout
-        android:minWidth="132dp"
         android:layout_width="wrap_content"
-        android:layout_height="132dp">
+        android:layout_height="132dp"
+        android:minWidth="132dp">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/shape_rounded_16"
             android:adjustViewBounds="true"
+            android:background="@drawable/shape_rounded_16"
             android:clipToOutline="true"
             android:contentDescription="@string/cdimage"
             android:scaleType="centerCrop"
@@ -30,30 +30,31 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/Theme.Effectivem.TextAppearance.TitleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="4dp"
         android:paddingTop="8dp"
+        android:paddingBottom="4dp"
+        android:textAppearance="@style/Theme.Effectivem.TextAppearance.TitleSmall"
         tools:text="Title" />
 
     <TextView
         android:id="@+id/town"
-        style="@style/Theme.Effectivem.TextAppearance.BodyMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"
         tools:text="Town" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/flights"/>
+            android:src="@drawable/flights" />
         <TextView
             android:id="@+id/price"
-            style="@style/Theme.Effectivem.TextAppearance.BodyMedium"
+            android:textAppearance="@style/Theme.Effectivem.TextAppearance.BodyMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Price" />
