--- a/shared/src/main/res/drawable/circle.xml
+++ b/shared/src/main/res/drawable/circle.xml
@@ -1,4 +1,8 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:width="24dp" android:height="24dp" />
-    <corners android:radius="12dp" />
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/black" />
+    <size
+        android:width="24dp"
+        android:height="24dp" />
 </shape>
