--- a/shared/src/main/res/values/styles.xml
+++ b/shared/src/main/res/values/styles.xml
@@ -75,16 +75,18 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <![CDATA[
+    <!-- bottom sheet dialog -->
     <style name="Theme.Effectivem.BottomSheetDialog" parent="ThemeOverlay.MaterialComponents.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/Theme.Effectivem.BottomSheet.Modal</item>
     </style>
 
     <!--ignores background style name="Theme.Effectivem.BottomSheet.Modal" parent="Widget.MaterialComponents.BottomSheet.Modal"-->
     <style name="Theme.Effectivem.BottomSheet.Modal" parent="Widget.Design.BottomSheet.Modal">
-        <item name="backgroundTint">@color/grey_2</item>
+        <item name="backgroundTint">?attr/colorSurfaceDim</item>
         <item name="android:background">@drawable/shape_rounded_dialog</item>
     </style>
+
+    <![CDATA[
     <style name="Theme.Effectivem.ImageButtonStyle" parent="Widget.AppCompat.ImageButton">
         <item name="android:background">@android:color/transparent</item>
         <item name="background">@color/red</item>
